se quita la faya

--- a/Atlas/widgets/IndicadoresRiesgo/Widget.html
+++ b/Atlas/widgets/IndicadoresRiesgo/Widget.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col3 label">
-                Faya
+                Falla
             </div>
             <div class="col8">
                 <div id="indicador-faya" class="indicador no-info"></div>
